:recycle: 비속어 필터 npe 의심 로직 리팩토링 #664